finishing i18n and flash messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,12 @@
 
   <body>
     <main role="main" class='container'>
+    <% if flash[:notice] %>
+      <%= render 'partials/success_flash' %>
+    <% elsif flash[:error] %>
+      <%= render 'partials/error_flash' %>
+    <% end %>
+
       <%= yield %>
     </main>
 
